Homework_04/kube/dp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fasthealth-dp
  labels:
    app: fasthealth-dp
spec:
  replicas: 2
  minReadySeconds: 10
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      env: dev
  template:
    metadata:
      labels:
        env: dev
    spec:
      containers:
      - name: fasthealth-app
        image: belokrilov/users:v1
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
