Homework_04/kube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fasthealth-ingress
spec:
  rules:
  - host: arch.homework
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: fasthealth-svc
            port:
              number: 80
  ingressClassName: nginx
